--- a/_output.yml
+++ b/_output.yml
@@ -1,10 +1,12 @@
 bookdown::gitbook:
   highlight: "default"
-  split_by: "section"
+  split_by: "chapter"
   config:
     toc:
       before: |
-        <li><a href="./index.html">KSD</a></li>
+        <li><a href="./index.html">KIDS</a></li>
+      after: |
+        <li>Email: fh12355@rjh.com.cn</li>
       collapse: subsection
       scroll_highlight: yes
     toolbar:
